@@ -1,5 +1,6 @@
 2014-04-15 MickeM
  * Fixed issue with aveerages and performance check_pdh #710
+ * Fixed issue with converting empty exclude statements for CheckService
 
 2014-04-xx MickeM
  * Added testcase for powershell scripts
